# ostendo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  WISHLIST.md  build.rs  present.sh
.claude/: CLAUDE.md  assessment-report.md
.claude/docs/: ANIMATION_REFERENCE.md  ARCHITECTURE.md  CLI_FLAGS.md  DIRECTIVE_REFERENCE.md  KEYBOARD_SHORTCUTS.md  SECURITY.md  THEME_LIST.md
.claude/rules/: architecture.md  coding-style.md
.claude/skills/: demo-scripts.md  presentation-format.md  theme-authoring.md
.github/workflows/: release.yml
docs/: EXAMPLES.md  PRESENTATION_FORMAT.md  THEME_GUIDE.md
presentations/: test_presentation.md
presentations/examples/: demo.md  quick_start.md  security_report.md  test_presentation.md  workshop.md
src/: main.rs  watch.rs
src/code/: executor.rs  highlight.rs  mod.rs  pty.rs
src/diagram/: mod.rs  parser.rs  render_box.rs  render_bracket.rs  render_vertical.rs
src/export/: html.rs  mod.rs  pdf.rs
src/image_util/: kitty.rs  mermaid.rs  mod.rs  render.rs
src/markdown/: inline.rs  mod.rs  parser.rs  parser_tests.rs  regex_patterns.rs  tables.rs
src/presentation/: mod.rs  slide.rs  state.rs
src/remote/: html.rs  mod.rs  server.rs
src/render/: animation.rs  engine.rs  layout.rs  mod.rs  progress.rs  text.rs
src/terminal/: ascii_art.rs  mod.rs  protocols.rs
src/theme/: builtin.rs  colors.rs  mod.rs  schema.rs
tests/integration/: export_verify.sh  kitty_visual.sh  run_all.sh  (+1 more)
themes/: amber_warning.yaml  arctic_blue.yaml  aurora.yaml  blood_moon.yaml  blueprint.yaml  catppuccin.yaml  clean_light.yaml  copper_rose.yaml  cyber_red.yaml  dracula.yaml  dracula_light.yaml  ember.yaml  frost_glass.yaml  matrix.yaml  midnight.yaml  military_green.yaml  minimal_mono.yaml  neon_purple.yaml  nord.yaml  nord_light.yaml  ocean_deep.yaml  outrun.yaml  paper.yaml  solarized.yaml  sunray.yaml  sunset_warm.yaml  terminal_green.yaml  terminal_green_light.yaml  twilight.yaml  vaporwave.yaml
(+22 files in other folders)
